frontend/less/custom.less
.top_bar a {
  color: inherit;
  text-decoration: none;
}
p {
  font-size: 18px;
  font-weight: 500;
}

h1 {
  font-size: 40px;
  font-weight: 700;
}

h1.main_headline {
  margin-bottom: 4px;;
}

h2 {
  font-size: 26px;
  margin-bottom: 20px;
  font-weight: 700;
}

h3 {
  font-size:22px;
}

h3.subheadline {
  margin-top:0;
  margin-bottom:40px;
}

h2.time_expectation{
  font-weight: 500;
  text-align: center;
}

p.step_headline{
  font-weight: 600;
}

.call_to_action_button {
  width: 100%;
  max-width: 20em;
  font-size: 18px;
  font-weight: 500;
}

.credibility_note {
  padding-top: 70px;
}
.credibility_note a{
  color:#3498DB;
  font-weight: bold;
}

.new_section{
  padding-top:24px;
}

.container {
  margin: 0 auto;
  padding-bottom: 20px;
}

.above_the_fold{
  background-color: #004C77;
  color:#ffffff;
}

.about_the_service, .privacy_description {
  background-color: #ECF0F1;
  p, h2 {
    text-align: left;
    max-width: 48rem;
  }
}

.apply_backup, .privacy_above_the_fold {
  background-color: #3498DB;
  color:#fff;
}

.privacy_above_the_fold h1{
  padding-top:0;
}

.privacy_description{
  padding-top:40px;
  padding-bottom:40px;
}

.privacy_description li{
  padding-bottom: 20px;
}

.privacy_description ul{
  list-style-type: circle;
}




.footer {
  background-color: #323a45;
  color: #fff;
}
.footer a {
  color: #3498D8;
}
.footer a:hover, .footer a:visited {
  color: #3498D8;
}

.cfa-logo {
  width: 12em;
  opacity: 0.3;
}
.footer_logo {
  padding: 3em 0 5em 0;
}

.btn-lg{
  margin-bottom:12px;
}

.above_the_fold .btn{
  margin-bottom:40px;
}

.journey_headline{
  text-align: center;
}


.gov_service_name,
.gov_service_description,
.apply_backup,
.backup_apply_headline,
.footer_logo,
.footer p {
  text-align: center;
}

.col_centered {
  float: none;
  margin: 0 auto;
}

ul.opportunities {
  padding: 0;
  padding-top: 12px;
  text-align: left;
}

.opportunity {
  padding-bottom: 20px;
}
.opportunity:before {
  content: "\2713";
  padding-right: 0.75em
}

section.footer.container.new_section{
  padding-top: 80px;
  padding-bottom: 50px;
  color:#fff;
}

iframe {
  position: fixed;
  background: #000;
  border: none;
  top: 0; right: 0;
  bottom: 0; left: 0;
  width: 100%;
  height: 100%;
}


// breadcrumbs
.breadcrumb .current { color: @text-color; }

// states
.stateful .state { display: none; }
.stateful.default .state.content_default { display: inline; }
.stateful.error .state.content_error { display: inline; }
.stateful.sending .state.content_sending { display: inline; }
.stateful.generating .state.content_generating { display: inline; }
.stateful.retrieving .state.content_retrieving { display: inline; }

.btn .glyphicon {
  margin-right: .5em;
}

.loading .glyphicon-refresh {
   -webkit-animation: fa-spin 2s infinite linear;
  animation: fa-spin 2s infinite linear;
}


.privacy_policy{

}

@-webkit-keyframes fa-spin {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(359deg);
    transform: rotate(359deg);
  }
}
@keyframes fa-spin {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(359deg);
    transform: rotate(359deg);
  }
}

@media (min-width: @screen-sm-min) {
  h2.time_expectation {
    padding-top:94px;
    padding-left:28px;
  }

  h1 {
    margin-top:80px;
    font-size: 54px;
    padding-top: 150px;
  }

  .new_section {
    padding-top:40px;
  }

  .journey_headline, h3.time_expectation {
    text-align: left;
  }

  .opportunity, section.footer.container.new_section {
    text-align: center;
    padding-bottom: 10px;
  }

  .above_the_fold {
    background-image: url("/static/img/CMR-hero.png");
    background-color: #205493;
    background-size: cover;
    min-height: 30em;
  }

}

@media (min-width: @screen-md-min) {
  .above_the_fold {
    height: 40em;
    background-color: #205493;
  }
}

.privacy_policy ul {
  list-style-type: disc;
}

.typeform_wrapper {
  height: 100%;
}
html, body {
  height: 100%;
}

